--- a/_layouts/funds.html
+++ b/_layouts/funds.html
@@ -4,15 +4,8 @@
 {% include head.html %}
 
 <body id="page-top">
-  {% include nav-funds.html %}
-  {% include header-funds.html %}
-  {% include call-to-action-funds.html %}
-  {% include feature-funds.html %}
-  {% include portfolio-funds.html %}
-  {% include services-funds.html %}
-  {% include aside-funds.html %}
-  {% include contact.html %}
-  {% include scripts.html %}
+  {% include nav-about.html %}
+  {% include header-about.html %}
 </body>
 
 </html>
