Update and rename nav-funds.html to nav-about.html

--- a/_includes/nav-about.html
+++ b/_includes/nav-about.html
@@ -15,22 +15,20 @@
                   <a href="/">Home</a>
               </li>
                 <li>
-                    <a class="page-scroll" href="#download">What</a>
+                    <a class="page-scroll" href="#">Affiliated Departments</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#why">How</a>
+                    <a class="page-scroll" href="#">Short Bio</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#features">When</a>
+                    <a class="page-scroll" href="#">Etcetera</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#donate">Donate</a>
+                    <a class="page-scroll" href="#">Transparancy</a>
                 </li>
+           
                 <li>
-                    <a class="page-scroll" href="#contact">Contact</a>
-                </li>
-                <li>
-                    <a href="/blog/">Blog</a>
+                    <a href="/blog/">Occational Blog</a>
                 </li>
             </ul>
         </div>
