--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -6,6 +6,21 @@
 <body id="page-top">
   {% include nav-about.html %}
   {% include header-about.html %}
+  
+  <article>
+    <div id="post" class="container">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+
+				{{ content }}
+
+            </div>
+        </div>
+    </div>
+</article>
+  
+  
+  
 </body>
 
 </html>
