--- a/_includes/services.html
+++ b/_includes/services.html
@@ -30,15 +30,15 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="feature-item">
-                                    <i class="icon-screen-smartphone text-primary"></i>
-                                    <h3>Device Mockups</h3>
-                                    <p class="text-muted">Ready to use HTML/CSS device mockups, no Photoshop required!</p>
+                                   
+                                    
+                                    <p class="text-muted">Nicholas A. Christakis, MD, PhD, MPH, is a sociologist and physician who conducts research in the area of biosocial science, investigating the biological predicates and consequences of social phenomena. He directs the Human Nature Lab at Yale University, where he is appointed as the Sol Goldman Family Professor of Social and Natural Science, and he is the Co-Director of the Yale Institute for Network Science.</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="feature-item">
-                                    <i class="icon-camera text-primary"></i>
-                                    <h3>Flexible Use</h3>
+                                   
+                                    
                                     <p class="text-muted">Put an image, video, animation, or anything else in the screen!</p>
                                 </div>
                             </div>
