--- a/_includes/services.html
+++ b/_includes/services.html
@@ -29,41 +29,21 @@
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-md-6">
-                                <div class="feature-item">
                                    
                                     
                                     <p class="text-muted">Nicholas A. Christakis, MD, PhD, MPH, is a sociologist and physician who conducts research in the area of biosocial science, investigating the biological predicates and consequences of social phenomena. He directs the Human Nature Lab at Yale University, where he is appointed as the Sol Goldman Family Professor of Social and Natural Science, and he is the Co-Director of the Yale Institute for Network Science.</p>
-                                </div>
                             </div>
                             <div class="col-md-6">
-                                <div class="feature-item">
                                    
                                     
-                                    <p class="text-muted">Put an image, video, animation, or anything else in the screen!</p>
-                                </div>
+                                    <p class="text-muted">Dr. Christakis’ lab is focused on the relationship between social networks and well-being. This research engages two types of phenomena: the social, mathematical, and biological rules governing how social networks form (“connection”), and the biological and social implications of how they operate to influence thoughts, feelings, and behaviors (“contagion”).</p>
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="feature-item">
-                                    <i class="icon-present text-primary"></i>
-                                    <h3>Free to Use</h3>
-                                    <p class="text-muted">As always, this theme is free to download and use for any purpose!</p>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="feature-item">
-                                    <i class="icon-lock-open text-primary"></i>
-                                    <h3>Open Source</h3>
-                                    <p class="text-muted">Since this theme is MIT licensed, you can use it commercially!</p>
-                                </div>
-                            </div>
-                        </div>
+                        
                     </div>
                 </div>
                 <div class="col-md-8">
-                  <h3>Hosts it in the best cloud hosting on the market</h3>
-                  <a target="_blank" href="https://m.do.co/c/a29d90274371" style="color:black" class="btn btn-outline btn-xl">Digital Ocean</a>  
+                  <a target="_blank" href="/about/" style="color:black" class="btn btn-outline btn-xl">More</a>  
                 </div>
 
             </div>
