--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -12,25 +12,25 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
               <li>
-                  <a class="page-scroll" href="/funds">Help the project</a>
+                  <a class="page-scroll" href="/about">About</a>
               </li>
                 <li>
-                    <a class="page-scroll" href="#download">Download</a>
+                    <a class="page-scroll" href="#">Research</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#features">Features</a>
+                    <a class="page-scroll" href="#">Teaching</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#portfolio">Portfolio</a>
+                    <a class="page-scroll" href="#">Publications</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#why">Why</a>
+                    <a class="page-scroll" href="#why">Media and Talks</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
                 </li>
                 <li>
-                    <a href="/blog/">Blog</a>
+                    <a href="http://humannaturelab.net">Lab</a>
                 </li>
             </ul>
         </div>
