--- a/_includes/services.html
+++ b/_includes/services.html
@@ -12,7 +12,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="device-container">
-                     <img src="/img/1024px-Nicholas_Christakis.jpg" class="img-responsive" alt=""> 
+                     <img src="/img/portrait1b.jpg" class="img-responsive" alt=""> 
                     </div>
                 </div>
                 <div class="col-md-8">
