--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -6,10 +6,8 @@
 <body id="page-top">
   {% include nav.html %}
   {% include header.html %}
-  {% include shortabout.html %}
-
+  {% include services.html %}
   {% include portfolio.html %}
-
   {% include contact.html %}
   {% include scripts.html %}
 </body>
