--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -349,6 +349,37 @@ section {
       left: 0;
     }
   }
+  
+  &.cta-lab {
+    position: relative;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+    background-position: center;
+    background-image: url('../img/lab.jpg');
+    padding: 250px 0;
+    .cta-content-donate {
+      position: relative;
+      z-index: 1;
+      h2 {
+        margin-top: 0;
+        margin-bottom: 25px;
+        color: white;
+        max-width: 450px;
+        font-size: 70px;
+      }
+    }
+    .overlay-lab {
+      height: 100%;
+      width: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+  }
+  
   &.contact {
     text-align: center;
     h2 {
