--- a/_includes/aside-lab.html
+++ b/_includes/aside-lab.html
@@ -1,9 +1,10 @@
-<section class="cta">
-    <div class="cta-content">
+<section id="lab" class="cta-lab">
+    <div class="cta-content-lab">
         <div class="container">
-            <h2>Help it. By<br>little actions.</h2>
-            <a href="/funds" class="btn btn-outline btn-xl page-scroll">How I can?!</a>
+            <h2>Give me happiness.</h2>
+             <h2>Help it. By<br>little actions.</h2>
+            <a href="http://humannaturelab.net" class="btn btn-outline btn-xl page-scroll">Lab Page</a>
         </div>
     </div>
-    <div class="overlay"></div>
+    <div class="overlay-lab"></div>
 </section>
