--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -6,8 +6,8 @@
 <body id="page-top">
   {% include nav.html %}
   {% include header.html %}
-    {% include services.html %}
-
+  {% include services.html %}
+  {% include aside-lab.html %}
   {% include portfolio.html %}
   {% include contact.html %}
   {% include scripts.html %}
