--- a/_includes/aside-lab.html
+++ b/_includes/aside-lab.html
@@ -1,8 +1,8 @@
 <section id="lab" class="cta-lab">
     <div class="cta-content-lab">
         <div class="container">
-            <h2>Give me happiness.</h2>
-             <h2>Help it. By<br>little actions.</h2>
+            <h2>The Human Nature Lab, directed by Nicholas Christakis, sits within the Yale Institute for Network Science and is focused on social networks and health.</h2>
+<!--             <h2>Help it. By<br>little actions.</h2> -->
             <a href="http://humannaturelab.net" class="btn btn-outline btn-xl page-scroll">Lab Page</a>
         </div>
     </div>
