--- a/_includes/aside-lab.html
+++ b/_includes/aside-lab.html
@@ -1,7 +1,7 @@
 <section id="lab" class="cta-lab">
     <div class="cta-content-lab">
         <div class="container">
-            <h2> Human Nature Lab is directed by Nicholas Christakis at the Yale Institute for Network Science</h2>
+            <h2> Dr. Christakis directs the Human Nature Lab at Yale</h2>
             <!--             <h2>Help it. By<br>little actions.</h2> -->
             <a href="http://humannaturelab.net" class="btn btn-outline btn-xl page-scroll">Lab Page</a>
         </div>
