--- a/_includes/aside-lab.html
+++ b/_includes/aside-lab.html
@@ -1,8 +1,8 @@
 <section id="lab" class="cta-lab">
     <div class="cta-content-lab">
         <div class="container">
-            <h2>Nicholas Christakis directs <br>the Human Nature Lab at Yale.</h2>
-            <h3 sytle="color:white">Visit the lab page to find out more.</h3>
+            <h2>Dr. Christakis directs <br>the Human Nature Lab.</h2>
+            <h3 style="color:white">Visit the lab page to find out more.</h3>
             <!--             <h2>Help it. By<br>little actions.</h2> -->
             <a href="http://humannaturelab.net" class="btn btn-outline btn-xl page-scroll">Lab Page</a>
         </div>
