--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -2,21 +2,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
-                <h2 class="section-heading">Our best products! <i style="color:#21cddb" class="fa fa-globe"></i></h2>
-                <p>Try our amazing products</p>
-                <hr>
-                {% if site.data-ad-client %}
-                <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                <!-- jekynewage -->
-                <ins class="adsbygoogle"
-                    style="display:block"
-                    data-ad-client="{{ site.data-ad-client }}"
-                    data-ad-slot="{{ site.data-ad-slot }}"
-                    data-ad-format="auto"></ins>
-                <script>
-                    (adsbygoogle = window.adsbygoogle || []).push({});
-                </script>
-                {% endif %}
+                <h2 class="section-heading">Research Projects <i style="color:#21cddb" class="fa fa-globe"></i></h2>
+                <p> The research in the Human Nature Lab engages two types of phenomena: the social, mathematical, and biological rules governing how social networks form (“connection”) and the biological and social implications of how they operate to influence thoughts, feelings, and behaviors (“contagion”).</p>
             </div>
         </div>
     </div>
@@ -31,10 +18,10 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Artificial Intelligence
                             </div>
                             <div class="project-name">
-                                Project Name
+                                and Collective Action
                             </div>
                         </div>
                     </div>
@@ -46,10 +33,10 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Genomics
                             </div>
                             <div class="project-name">
-                                Project Name
+                                of Social Networks
                             </div>
                         </div>
                     </div>
@@ -61,16 +48,16 @@
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Experiments
                             </div>
                             <div class="project-name">
-                                Project Name
+                                in the Field and Online
                             </div>
                         </div>
                     </div>
                 </a>
             </div>
-            <div class="col-lg-4 col-sm-6">
+           <!-- <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
                     <img src="/img/portfolio/4.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
@@ -115,6 +102,7 @@
                     </div>
                 </a>
             </div>
+            -->
         </div>
     </div>
 </section>
