--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -3,7 +3,8 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <h2 class="section-heading">Research Projects <i style="color:#21cddb" class="fa fa-globe"></i></h2>
-                <p> The research in the Human Nature Lab engages two types of phenomena: the social, mathematical, and biological rules governing how social networks form (“connection”) and the biological and social implications of how they operate to influence thoughts, feelings, and behaviors (“contagion”).</p>
+                <p> The research by Nicholas Christakis in the Human Nature Lab engages two types of phenomena: the social, mathematical, and biological rules governing how social networks form (“connection”) and the biological and social implications of how they operate to influence thoughts, feelings, and behaviors (“contagion”).</p>
+            <a class="btn btn-outline btn-xl" href="/research/">About Research</a>
             </div>
         </div>
     </div>
