--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,16 +1,4 @@
-<section id="research" class="download bg-primary text-center">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-8 col-md-offset-2">
-                <h2 class="section-heading">Research Projects <i style="color:#21cddb" class="fa fa-globe"></i></h2>
-                <p> The research by Nicholas Christakis in the Human Nature Lab engages two types of phenomena: the social, mathematical, and biological rules governing how social networks form (“connection”) and the biological and social implications of how they operate to influence thoughts, feelings, and behaviors (“contagion”).</p>
-            <a class="btn btn-outline btn-xl" href="/research/">About Research</a>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section class="no-padding" id="portfolio">
+<section class="no-padding" id="research">
     <div class="container-fluid">
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
@@ -107,3 +95,18 @@
         </div>
     </div>
 </section>
+
+
+
+<section id="portfolio" class="download bg-primary text-center">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+                <h2 class="section-heading">Research Projects <i style="color:#21cddb" class="fa fa-globe"></i></h2>
+                <p> The research by Nicholas Christakis in the Human Nature Lab engages two types of phenomena: the social, mathematical, and biological rules governing how social networks form (“connection”) and the biological and social implications of how they operate to influence thoughts, feelings, and behaviors (“contagion”).</p>
+            <a class="btn btn-outline btn-xl" href="/research/">About Research</a>
+            </div>
+        </div>
+    </div>
+</section>
+
