--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -8,6 +8,8 @@
   {% include header.html %}
   {% include services.html %}
   {% include portfolio.html %}
+    {% include aside-lab.html %}
+
   {% include aside-lab.html %}
   {% include contact.html %}
   {% include scripts.html %}
