--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -8,8 +8,7 @@
   {% include header.html %}
   {% include services.html %}
   {% include portfolio.html %}
-    {% include aside-lab.html %}
-
+    {% include book.html %}
   {% include aside-lab.html %}
   {% include contact.html %}
   {% include scripts.html %}
