--- a/_includes/book.html
+++ b/_includes/book.html
@@ -4,7 +4,10 @@
                 <div class="col-lg-12 text-center">
                     <div class="section-heading">
                         <h2>Publications</h2>
-                        <hr>
+                                                    <hr>
+                            <p>Nicholas Chrisrtakis has published two books and over 150 papers, and has edited two clinical textbooks. His book on the way social networks affect our lives,
+                                    Connected: The Surprising Power of Our Social Networks and How They Shape Our Lives is available <a href="http://www.amazon.com/Connected-Surprising-Networks-Friends-Everything/dp/0316036137?pf_rd_mnb=ATVPDKIKX0D34&pf_rd_stb=center-2&pf_rd_rat=0817NMRY4ZRQZM6P18TH&pf_rd_t3r=101&pf_rd_ptd=470938631&pf_rd_ied=507846&tag=buaazs-20&pf_rd_ptd=470938631&pf_rd_ied=507846
+" style="color:black" class="btn btn-outline btn-xl">here</a>. This book has been translated into nearly 20 foreign languages, and it has been widely reviewed. His main collaborator in this research is <a href="http://fowler.ucsd.edu/">James Fowler</a>.                          
                     </div>
                 </div>
             </div>
@@ -13,22 +16,16 @@
              <div class="col-md-8">
                   <h3>Connected: The Surprising Power of Our Social networks and How they Shape Our lives</h3>
                   <p class="text-muted">N.A. Christakis and J.H. Fowler</p>
-                                     <a target="_blank" href="http://connectedthebook.com/" style="color:black" class="btn btn-outline btn-xl">More</a> <br>
+                  <a target="_blank" href="http://connectedthebook.com/" style="color:black" class="btn btn-outline btn-xl">More</a> <br>
 
-                 
-                  <a target="_blank" href="http://www.amazon.com/Connected-Surprising-Networks-Friends-Everything/dp/0316036137?pf_rd_mnb=ATVPDKIKX0D34&pf_rd_stb=center-2&pf_rd_rat=0817NMRY4ZRQZM6P18TH&pf_rd_t3r=101&pf_rd_ptd=470938631&pf_rd_ied=507846&tag=buaazs-20&pf_rd_ptd=470938631&pf_rd_ied=507846
-" style="color:black" class="btn btn-outline btn-xl">Amazon</a> <br>
-
-
-
-
+              
 
              </div>
             
             
                 <div class="col-md-4">
                     <div class="device-container">
-                         <img src="/img/book.jpg" class="img-responsive" alt="">
+                         <img src="/img/connected.jpg" class="img-responsive" alt="">
                     </div>
                 </div>
                         
