--- a/_includes/book.html
+++ b/_includes/book.html
@@ -5,10 +5,11 @@
                     <div class="section-heading">
                         <h2>Publications</h2>
                                                     <hr> <br>
+                                                                            <a target="_blank" href=/publications" style="color:black" class="btn btn-outline btn-xl">Publication List;</a> <br>
+
                             <p>Nicholas Christakis has published two books and over 150 papers, and has edited two clinical textbooks. His book on the way social networks affect our lives,
                                     <i>Connected: The Surprising Power of Our Social Networks and How They Shape Our Lives</i>, is available <a href="http://www.amazon.com/Connected-Surprising-Networks-Friends-Everything/dp/0316036137?pf_rd_mnb=ATVPDKIKX0D34&pf_rd_stb=center-2&pf_rd_rat=0817NMRY4ZRQZM6P18TH&pf_rd_t3r=101&pf_rd_ptd=470938631&pf_rd_ied=507846&tag=buaazs-20&pf_rd_ptd=470938631&pf_rd_ied=507846
 ">here</a>. This book has been translated into nearly 20 foreign languages, and it has been widely reviewed. His main collaborator in this research is <a href="http://fowler.ucsd.edu/">James Fowler</a>. </p>                      
-                                                <a target="_blank" href=/publications" style="color:black" class="btn btn-outline btn-xl">More Publications &rarr;</a> <br>
       
                     </div>
                 </div>
