--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -6,7 +6,7 @@
 <body id="page-top">
   {% include nav.html %}
   {% include header.html %}
-  {% include services.html %}
+  {% include aside-about.html %}
   {% include portfolio.html %}
     {% include book.html %}
   {% include aside-lab.html %}
