--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -17,20 +17,21 @@
                 <li>
                     <a class="page-scroll" href="#research">Research</a>
                 </li>
-                <li>
-                    <a class="page-scroll" href="#">Teaching</a>
+                  <li>
+                    <a class="page-scroll" href="#publications">Publications</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#">Publications</a>
+                    <a class="page-scroll" href="/teaching/">Teaching</a>
                 </li>
+              
                 <li>
-                    <a class="page-scroll" href="#why">Media and Talks</a>
+                    <a class="page-scroll" href="/media/">Media and Talks</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
                 </li>
                 <li>
-                    <a href="http://humannaturelab.net">Lab</a>
+                    <a class="page-scroll" href="#lab">Lab</a>
                 </li>
             </ul>
         </div>
