--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -8,7 +8,7 @@
   {% include header.html %}
   {% include aside-about.html %}
   {% include portfolio.html %}
-    {% include book.html %}
+    {% include aside-pubs.html %}
   {% include aside-lab.html %}
   {% include contact.html %}
   {% include scripts.html %}
