--- a/_includes/aside-pubs.html
+++ b/_includes/aside-pubs.html
@@ -10,24 +10,23 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-lg-3 col-md-8 text-center">
+            <div class="col-md-8 text-center">
                 <div class="service-box">
-                    <a http://connectedthebook.com"><img src="/img/connected.jpg" class="img-responsive" alt=""></a>
-                    <h3>Books/h3>
+                    <a http://connectedthebook.com"><img src="/img/connectedsmall.jpg" class="img-responsive" alt=""></a>
+                    <h3>Books</h3>
                     <p class="text-muted">Co-authored by James Fowler, <i>Connected: The Surprising Power of Our Social Networks and How They Shape Our Lives</i>, has been translated into nearly 20 foreign languages. Dr. Christakis has also pubslied <i>Death Fortold</i> and edited two clinical textbooks.</p>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-8 text-center">
+            <div class="col-md-8 text-center">
                 <div class="service-box">
-                    <a http://connectedthebook.com"><img src="/img/connected.jpg" class="img-responsive" alt=""></a>
+                    <a http://connectedthebook.com"><img src="/img/paperssmall.jpg" class="img-responsive" alt=""></a>
                     <h3>Papers</h3>
                     <p class="text-muted">Dr. Christakis is author of more than 150 scientific papers, which have appeared in <i>Nature</i>, <i>Science</i>, <i>PNAS</i> and other top peeer-reviewed joiurnals. </p>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-8 text-center">
+            <div class="col-md-8 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-linkedin wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                    <a http://content.time.com/time/specials/packages/article/0,28804,1894410_1893209_1893472,00.html"><img src="/img/media.jpg" class="img-responsive" alt=""></a>
+                    <a http://content.time.com/time/specials/packages/article/0,28804,1894410_1893209_1893472,00.html"><img src="/img/mediasmall.jpg" class="img-responsive" alt=""></a>
                     <h3>Media</h3>
                     <p class="text-muted">Popular writtings in online and print media include editorials in The New York Times and an occational personal blog. Dr. Christakis's writtings has also been widely covered and he has been named by Time as one of top 100 most influential thinkers.</p>
                 </div>
