--- a/_includes/aside-pubs.html
+++ b/_includes/aside-pubs.html
@@ -28,7 +28,7 @@
                 <div class="service-box">
                     <a http://content.time.com/time/specials/packages/article/0,28804,1894410_1893209_1893472,00.html"><img src="/img/mediasmall.jpg" class="img-responsive" alt=""></a>
                     <h3>Media</h3>
-                    <p class="text-muted">Popular writtings in online and print media include editorials in The New York Times and an occational personal blog. Dr. Christakis's writtings has also been widely covered and he has been named by Time as one of top 100 most influential thinkers.</p>
+                    <p class="text-muted">Dr. Christakis's writtings have been widely covered in online and print media. He has been named by Time Magazine as one of top 100 most influential thinkers. He has occationally published op-ed pieces in leading newspapers and on his personal blog.</p>
                 </div>
             </div>
             
