--- a/_includes/aside-pubs.html
+++ b/_includes/aside-pubs.html
@@ -37,11 +37,8 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <br />
-                <hr class="primary">
-                <h3>Mail me at lantoniotrento[at]gmail.com for any kind of info</h3>
-                <hr class="primary">
-                <br />
+            <a target="_blank" href="/publications/" style="color:black" class="btn btn-outline btn-xl">Publication List</a>  
+
             </div>
         </div>
     </div>
