--- a/_includes/aside-pubs.html
+++ b/_includes/aside-pubs.html
@@ -11,22 +11,22 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4 text-center">
-                <div class="service-box">
-                    <a http://connectedthebook.com"><img src="/img/connectedsmall.jpg" class="img-responsive" alt=""></a>
+                <div class="service-box"> 
+                    <center><a href="http://connectedthebook.com"><img src="/img/connectedsmall.jpg" class="img-responsive" alt=""></a></center>
                     <h3>Books</h3>
                     <p class="text-muted">Co-authored by James Fowler, <i>Connected: The Surprising Power of Our Social Networks and How They Shape Our Lives</i>, has been translated into nearly 20 foreign languages. Dr. Christakis has also pubslied <i>Death Fortold</i> and edited two clinical textbooks.</p>
                 </div>
             </div>
             <div class="col-md-4 text-center">
                 <div class="service-box">
-                    <a http://connectedthebook.com"><img src="/img/paperssmall.jpg" class="img-responsive" alt=""></a>
+                    <center><a href="https://www.nature.com/articles/nature22332"><img src="/img/paperssmall.jpg" class="img-responsive" alt=""></a></center>
                     <h3>Papers</h3>
                     <p class="text-muted">Dr. Christakis is author of more than 150 scientific papers, which have appeared in <i>Nature</i>, <i>Science</i>, <i>PNAS</i> and other top peeer-reviewed joiurnals. </p>
                 </div>
             </div>
             <div class="col-md-4 text-center">
                 <div class="service-box">
-                    <a http://content.time.com/time/specials/packages/article/0,28804,1894410_1893209_1893472,00.html"><img src="/img/mediasmall.jpg" class="img-responsive" alt=""></a>
+                    <center><a href="http://content.time.com/time/specials/packages/article/0,28804,1894410_1893209_1893472,00.html"><img src="/img/mediasmall.jpg" class="img-responsive" alt=""></a></center>
                     <h3>Media</h3>
                     <p class="text-muted">Dr. Christakis's writtings have been widely covered in online and print media. He has been named by Time Magazine as one of top 100 most influential thinkers. He has occationally published op-ed pieces in leading newspapers and on his personal blog.</p>
                 </div>
