--- a/_includes/aside-pubs.html
+++ b/_includes/aside-pubs.html
@@ -14,7 +14,7 @@
                 <div class="service-box"> 
                     <center><a href="http://connectedthebook.com"><img src="/img/connectedsmall.jpg" class="img-responsive" alt=""></a></center>
                     <h3>Books</h3>
-                    <p class="text-muted">Co-authored by James Fowler, <i>Connected: The Surprising Power of Our Social Networks and How They Shape Our Lives</i>, has been translated into nearly 20 foreign languages. Dr. Christakis has also pubslied <i>Death Fortold</i> and edited two clinical textbooks.</p>
+                    <p class="text-muted">Co-authored with <a href="http://fowler.ucsd.edu">James Fowler</a>, <a href="https://www.amazon.com/Connected-Surprising-Networks-Friends-Everything/dp/0316036137/ref=asap_bc?ie=UTF8"><i>Connected: The Surprising Power of Our Social Networks and How They Shape Our Lives</i></a>, has been translated into nearly 20 foreign languages. Dr. Christakis has also pubslied <a href="https://www.amazon.com/Death-Foretold-Prophecy-Prognosis-Medical/dp/0226104710/ref=mt_paperback?_encoding=UTF8&me="><i>Death Fortold</i></a> and edited two clinical textbooks.</p>
                 </div>
             </div>
             <div class="col-md-4 text-center">
