--- a/_includes/aside-pubs.html
+++ b/_includes/aside-pubs.html
@@ -28,7 +28,7 @@
                 <div class="service-box">
                     <center><a href="http://content.time.com/time/specials/packages/article/0,28804,1894410_1893209_1893472,00.html"><img src="/img/mediasmall.jpg" class="img-responsive" alt=""></a></center>
                     <h3>Media</h3>
-                    <p class="text-muted">Dr. Christakis's writtings have been widely covered in online and print media. He has been named by Time Magazine as one of top 100 most influential thinkers. He has occationally published op-ed pieces in leading newspapers and on his personal blog.</p>
+                    <p class="text-muted">Dr. Christakis's writtings have been widely covered in online and print media. He has been named by Time Magazine as one of the world's 100 most important people. He occationally writes op-ed pieces for newspapers and his personal blog.</p>
                 </div>
             </div>
             
