--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,7 +1,7 @@
 
 <section id="contact" class="contact bg-primary">
     <div class="container">
-        <h2>We <i class="fa fa-heart"></i> new friends!</h2>
+        <h2>To get in touch, email me at nicholas[dot]christakis[at]yale[dot]edu, or follow me on social media.</h2>
         <ul class="list-inline list-social">
             {% for network in site.social %}
             <li class="social-{{ network.title }}">
