--- a/_layouts/teaching.html
+++ b/_layouts/teaching.html
@@ -6,7 +6,9 @@
 <body id="page-top">
   {% include nav-teaching.html %}
   {% include header-teaching.html %}
+	<article>
 	{{ content }}
+	</article>
   {% include contact.html %}
   {% include scripts.html %}
 </body>
