--- a/_includes/nav-teaching.html
+++ b/_includes/nav-teaching.html
@@ -15,20 +15,20 @@
                   <a href="/">Home</a>
               </li>
                 <li>
-                    <a class="page-scroll" href="#">Affiliated Departments</a>
+                    <a class="page-scroll" href="#mgt573">MGT 573</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#">Short Bio</a>
+                    <a class="page-scroll" href="#mgt874">MGT 874</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#">Etcetera</a>
+                    <a class="page-scroll" href="#socy126 ">SOCY 126</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#">Transparancy</a>
+                    <a class="page-scroll" href="#socy554">SOCY 554</a>
                 </li>
            
                 <li>
-                    <a href="/blog/">Occational Blog</a>
+                    <a class="page-scroll" href="#socy636">SOCY 636/EEB 636</a>
                 </li>
             </ul>
         </div>
