--- a/_includes/nav-teaching.html
+++ b/_includes/nav-teaching.html
@@ -15,7 +15,7 @@
                   <a href="/">Home</a>
               </li>
                 <li>
-                    <a class="page-scroll" href="#SOM-MGM-573:-Network-Interventions">MGT 573</a>
+                    <a class="page-scroll" href="#SOM-MGM-573">MGT 573</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#mgt874">MGT 874</a>
