--- a/_includes/nav-teaching.html
+++ b/_includes/nav-teaching.html
@@ -15,20 +15,20 @@
                   <a href="/">Home</a>
               </li>
                 <li>
-                    <a class="page-scroll" href="#SOM-MGM-573">MGT 573</a>
+                    <a class="page-scroll" href="#SOM-MGT-573">MGT 573</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#mgt874">MGT 874</a>
+                    <a class="page-scroll" href="#SOM-MGT-874">MGT 874</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#socy126 ">SOCY 126</a>
+                    <a class="page-scroll" href="#Sociology-126">SOCY 126</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#socy554">SOCY 554</a>
+                    <a class="page-scroll" href="#Sociology-554">SOCY 554</a>
                 </li>
            
                 <li>
-                    <a class="page-scroll" href="#socy636">SOCY 636/EEB 636</a>
+                    <a class="page-scroll" href="#Sociology-636b">SOCY 636/EEB 636</a>
                 </li>
             </ul>
         </div>
