--- a/_layouts/socy126.html
+++ b/_layouts/socy126.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html lang="en">
+
+{% include head.html %}
+
+<body id="page-top">
+  {% include nav-teaching.html %}
+  {% include header-socy126.html %}
+  <article>
+  	<div id="post" class="container">
+        	<div class="row">
+            		<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+		    	{{ content }}
+			</div>
+		</div>
+	  </div>
+  </article>
+  {% include contact.html %}
+  {% include scripts.html %}
+</body>
+
+</html>
 
