--- a/_layouts/socy126.html
+++ b/_layouts/socy126.html
@@ -4,7 +4,7 @@
 {% include head.html %}
 
 <body id="page-top">
-  {% include nav-teaching.html %}
+  {% include nav-socy126.html %}
   {% include header-socy126.html %}
   <article>
   	<div id="post" class="container">
