--- a/_includes/nav-socy126.html
+++ b/_includes/nav-socy126.html
@@ -15,7 +15,7 @@
                   <a href="/">Home</a>
               </li>
                 <li>
-                    <a class="page-scroll" href="#course-description">Course Description</a>
+                    <a class="page-scroll" href="#">Course Description</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#faq">FAQ</a>
