--- a/_includes/nav-socy126.html
+++ b/_includes/nav-socy126.html
@@ -15,10 +15,10 @@
                   <a href="/">Home</a>
               </li>
                 <li>
-                    <a class="page-scroll" href="#">Course Description</a>
+                    <a class="page-scroll" href="../socy126">Course Description</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#faq">FAQ</a>
+                    <a class="page-scroll" href="/socy126#faq">FAQ</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="../podcasts-2015">2015 Podcasts</a>
